calculate per position rankings

--- a/baseball_stats/2021_MLB_stats.ipynb
+++ b/baseball_stats/2021_MLB_stats.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,8 @@
     "import scipy\n",
     "\n",
     "from fangraphs import fangraph\n",
-    "import bb_stat_utils"
+    "import bb_stat_utils\n",
+    "from IPython.display import display, HTML"
    ]
   },
   {
@@ -29,12 +30,12 @@
    "source": [
     "# Run this cell to generate the SQLLite DB. \n",
     "# This may take a while (~30 mins)\n",
-    "fangraph.generate_sqllite_tables()"
+    "#fangraph.generate_sqllite_tables()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,14 +69,43 @@
     "batting_df = pd.read_sql('SELECT * FROM bat', con=conn)\n",
     "for col in batting_df.columns:\n",
     "    batting_df[col] = batting_df[col].astype('int', errors='ignore')\n",
-    "batting_df_sum = batting_df.groupby('name').sum()\n",
-    "\n",
     "batting_df['Datetime'] = pd.to_datetime(batting_df['Date'], format=\"%Y-%m-%d\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Clean Position Data (Games Played at Each Position)\n",
+    "# make a column for each position and count the games played at the position\n",
+    "# prepend an f to each position to incidate its a fielding stat and avoid conflating Singles (1B) with the first base position\n",
+    "unique_pos = []\n",
+    "for dashed_pos in batting_df.Pos.unique():\n",
+    "    [ unique_pos.append('f' + pos) for pos in dashed_pos.split('-') if 'f' + pos not in unique_pos]\n",
+    "batting_df[unique_pos] = 0\n",
+    "\n",
+    "for pos in unique_pos:\n",
+    "    batting_df.loc[batting_df['Pos'] == pos[1::], pos] = 1\n",
+    "\n",
+    "# Sanity Check (Tatis Played Games at SS, RF, CF, DH)\n",
+    "batting_df.loc[batting_df['name'].str.contains('tatis-jr'), unique_pos].sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Aggregate Batting Data for a Full Season\n",
+    "batting_df_sum = batting_df.groupby('name').sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,11 +121,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Calculate 'advanced', non integer metrics for the full season\n",
+    "# Calculate 'advanced', non integer metrics for the full season,\n",
+    "#  these functions are applied in place\n",
     "bb_stat_utils.calc_SLUG_TOT(batting_df_sum)\n",
     "bb_stat_utils.calc_WHIP_TOT(pitching_df_sum)"
    ]
@@ -115,11 +146,26 @@
    "source": [
     "cats = ['HR', 'RBI', 'OB_TOT', 'SB', 'SLUG_TOT']\n",
     "cats_power = {key: 1.0 for key in cats}\n",
-    "bb_stat_utils.topsis(df=batting_df, cats=cats, cats_power=cats_power,  csv_name='bat_rank_bbref.csv')\n",
     "\n",
+    "min_games_played_at_pos = 20\n",
+    "print(batting_df_sum.loc['fernando-tatis-jr', unique_pos])\n",
+    "for pos in unique_pos:\n",
+    "    mask = (batting_df_sum[pos] > min_games_played_at_pos)\n",
+    "    sub_df = batting_df_sum.loc[mask,:].copy()\n",
+    "    score_df = bb_stat_utils.topsis(df=sub_df, cats=cats, cats_power=cats_power,  csv_name=None)\n",
+    "    display(HTML(f'<h1>{pos}</h1>' + score_df.iloc[:5][cats + ['distance_from_ideals', pos]].to_html()))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "cats = ['ER', 'QS_STAND', 'SV', 'WH_TOT', 'SO', 'IP']\n",
     "cats_power = {'ER': -1.0, 'QS_STAND': 1.0, 'SV': 1.0, 'WH_TOT': -1.0, 'SO': 1.0, 'IP' : 1.0}\n",
-    "bb_stat_utils.topsis(df=pitching_df, cats=cats, cats_power=cats_power, csv_name='pitch_rank_bbref.csv')\n"
+    "score_df = bb_stat_utils.topsis(df=pitching_df_sum, cats=cats, cats_power=cats_power, csv_name=None)\n",
+    "display(HTML(f'<h1>Pitching</h1>' + score_df.iloc[:5][cats + ['distance_from_ideals']].to_html()))\n"
    ]
   }
  ],
