added calculus derivation

--- a/space_elev/sim.ipynb
+++ b/space_elev/sim.ipynb
@@ -31,6 +31,77 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Model Validation\n",
+    "\n",
+    "Derive the Tension Delta for an elevator with no Counter mass. Similair to the derivation in Section II of this [this](https://users.wpi.edu/~paravind/Publications/PKASpace%20Elevators.pdf) paper\n",
+    "\n",
+    "$\n",
+    "\\large\n",
+    "-m\\omega^2r  = T_{above} - T_{below} - W\n",
+    "$\n",
+    "\n",
+    "$\n",
+    "W - m\\omega^2r = \\Delta T\n",
+    "$\n",
+    "\n",
+    "$\n",
+    "m(\\frac{\\mu}{r^2} - \\omega^2r) = \\Delta T\n",
+    "$\n",
+    "\n",
+    "\n",
+    "$\n",
+    "A\\rho dr(\\frac{\\mu}{r^2} - \\omega^2r) = dT\n",
+    "$\n",
+    "\n",
+    "$\n",
+    "\\frac{dT}{dr}=A\\rho(\\frac{\\mu}{r^2} - \\omega^2r)\n",
+    "$\n",
+    "\n",
+    "$\n",
+    "\\int_{T_e}^{T_{r}}dT = \\int_{R_e}^{L_{cable}}A\\rho(\\frac{\\mu}{r^2} - \\omega^2r)dr\n",
+    "$\n",
+    "\n",
+    "\n",
+    "$\n",
+    "T(r)-T_e=\\left[A\\rho\\left(\\frac{-\\mu}{r}-\\frac{r^2}{2}\\omega^2\\right)\\right]_R^L\n",
+    "$\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def dt_dr(r):\n",
+    "    return phys_prop.density * phys_prop.cross_sectional_area * ( (cb.mu / r **2) - (cb.omega[2] **2) *r) \n",
+    "\n",
+    "def tension_calc(r):\n",
+    "    return phys_prop.density * phys_prop.cross_sectional_area * (( -1 * r ** 2 *cb.omega[2]  ** 2 / 2 ) - (cb.mu / r))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cable_length = 150000E3\n",
+    "ev = elements.space_evelator(cable_length=cable_length, phys_prop=phys_prop, anchor_mass=0)\n",
+    "\n",
+    "plt.figure()\n",
+    "paper =  tension_calc(ev.radii[:,0]) - tension_calc(6378e3)\n",
+    "plt.plot(ev.radii[:,0], paper , 'r-')\n",
+    "plt.plot(ev.radii[:,0], ev.tensions[:,0], 'b-')\n",
+    "plt.figure()\n",
+    "plt.plot(ev.radii[:,0], (ev.tensions[:,0] - paper), '.')\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Variation on Cable Length"
    ]
   },
