--- a/betting/test.ipynb
+++ b/betting/test.ipynb
@@ -2,9 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'code': 'BET419',\n",
+       " 'developerMessage': 'No Gamelines Events Found for League 3'}"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import re\n",
     "import urllib.request\n",
@@ -23,9 +35,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                  name  leagueId    sportName  sportId\n",
+      "0              Malta - Premier League   88674310       Soccer     5312\n",
+      "1  ITF Doubles - Frankfurt am Main (M)  88674346       Tennis     5321\n",
+      "2   NASCAR Xfinity Series Championship  88674348  Motorsports     5325\n",
+      "3         ATP Qualifiers - Cincinnati   88674362       Tennis     5321\n",
+      "4                     ATP - Cincinnati  88674363       Tennis     5321\n"
+     ]
+    }
+   ],
    "source": [
     "url = \"https://sportsbook.draftkings.com/api/odds/v1/leagues/\"\n",
     "request = urllib.request.Request(url)\n",
@@ -39,9 +64,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Read Data in From DraftKings\n",
     "url = \"https://sportsbook.draftkings.com/api/odds/v1/leagues/3/offers/gamelines.json\"\n",
@@ -54,9 +90,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "236\n"
+     ]
+    }
+   ],
    "source": [
     "ct = 0\n",
     "print(len(league_df[league_df['sportName']=='Soccer']))\n",
@@ -73,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,8 +138,8 @@
     "# Seed Fields\n",
     "data['bet1'] = 100.0 \n",
     "data['bet2_30boost_on_pos'] = np.nan\n",
-    "data['profit_1'] = np.nan\n",
-    "data['profit_2'] = np.nan\n",
+    "data['winnings1'] = np.nan\n",
+    "data['winnings2'] = np.nan\n",
     "data['good_bet'] = False\n",
     "data['min_boost_to_positive'] = np.nan\n",
     "data['min_boost_to_negitive'] = np.nan"
@@ -145,9 +189,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (3248923950.py, line 9)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"/tmp/ipykernel_25954/3248923950.py\"\u001b[0;36m, line \u001b[0;32m9\u001b[0m\n\u001b[0;31m    c       data.loc[mask,'bet2_30boost_on_pos'] = c['bet1'].mean() * (c['odd_math'].max() + 1 + 0.30) / (c['odd_math'].min() + 1)\u001b[0m\n\u001b[0m            ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "# https://www.wolframalpha.com/input/?i=%28a%2Bx%29+%2F+%28a%2B1%2Bx%29+%3D+1+%2F%28b%2B1%29++for+x\n",
     "for bet in data['same_bet'].unique():\n",
@@ -157,9 +210,9 @@
     "        data.loc[mask,'min_boost_to_positive'] = 1/c['odd_math'].min() - c['odd_math'].max()\n",
     "        data.loc[mask,'min_boost_to_negitive'] = 1/c['odd_math'].max() - c['odd_math'].min()\n",
     "\n",
-    "        data.loc[mask,'bet2_30boost_on_pos'] = c['bet1'].mean() * (c['odd_math'].max() + 0.30) / (c['odd_math'].min() + 1)\n",
-    "        data.loc[mask,'profit_1'] =  c['bet1'].mean() + c['bet1'].mean() + (c['odd_math'].max() + 0.30)\n",
-    "        data.loc[mask,'profit_2'] =  data.loc[mask,'bet2_30boost_on_pos'] + data.loc[mask,'bet2_30boost_on_pos'] + (c['odd_math'].min())"
+    "        data.loc[mask,'bet2_30boost_on_pos'] = c['bet1'].mean() * (c['odd_math'].max() + 1 + 0.30) / (c['odd_math'].min() + 1)\n",
+    "        data.loc[mask,'winnings1'] =  c['bet1'].mean() + c['bet1'].mean() * (c['odd_math'].max() + 0.30)\n",
+    "        data.loc[mask,'winnings2'] =  data.loc[mask,'bet2_30boost_on_pos'] + data.loc[mask,'bet2_30boost_on_pos'] * (c['odd_math'].min())"
    ]
   },
   {
@@ -169,23 +222,8 @@
    "outputs": [],
    "source": [
     "# Assume 30 Percent Boost\n",
-    "\n",
-    "\n",
-    "\n",
     "data1 = data[abs(data['min_boost_to_positive'])<1]\n",
     "data1.to_csv('sample.csv')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# how much you wiin - wagers\n",
-    "# Group on Line \n",
-    "# Bet 100 on Plus 100\n",
-    "2-0ML62741785_1 - win\n",
-    "2-0ML62741785_2 draw (not wanted)\n",
-    "2-0ML62741785_3 - loss\n"
    ]
   },
   {
