--- a/betting/bulk_process.ipynb
+++ b/betting/bulk_process.ipynb
@@ -13,7 +13,8 @@
     "import json\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import re\n"
+    "import re\n",
+    "import time\n"
    ]
   },
   {
@@ -41,9 +42,9 @@
     "json_ls = []\n",
     "\n",
     "ct = 0\n",
-    "total_leagues=len(league_df[league_df['sportName']=='Soccer'])\n",
+    "total_leagues=len(league_df)\n",
     "\n",
-    "for i in league_df.loc[league_df['sportName']=='Soccer', 'leagueId']:\n",
+    "for i in league_df['leagueId']: #.loc[league_df['sportName']=='Soccer', 'leagueId']:\n",
     "    ct += 1\n",
     "    url = f\"https://sportsbook.draftkings.com/api/odds/v1/leagues/{i}/offers/gamelines.json\"\n",
     "    request = urllib.request.Request(url)\n",
@@ -65,16 +66,8 @@
    "source": [
     "df_ls = []\n",
     "[ df_ls.append(process_data.process_betting_data(json_data=json_data) )for json_data in json_ls]\n",
-    "buld_data = pd.concat(df_ls)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "buld_data.to_csv('All_Soccer12.csv')"
+    "buld_data = pd.concat(df_ls)\n",
+    "buld_data.to_csv(f'{time.strftime(\"%y%m%dT%H%M\")}_ALL_SPORTS.csv')"
    ]
   },
   {
@@ -96,7 +89,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "buld_data['winnings1']"
+    "import pickle as pk\n",
+    "\n",
+    "with open('pick2.pk', 'wb') as f:\n",
+    "    pk.dump(json_ls,f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('pick2.pk', 'rb') as f:\n",
+    "    json_ls = pk.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_ls = []\n",
+    "[ df_ls.append(process_data.process_betting_data(json_data=json_data) )for json_data in json_ls]\n",
+    "buld_data = pd.concat(df_ls)\n",
+    "buld_data.to_csv('ALL_SPORTS_DEBUG.csv')"
    ]
   }
  ],
