--- a/baseball_stats/2021_MLB_stats.ipynb
+++ b/baseball_stats/2021_MLB_stats.ipynb
@@ -9,42 +9,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "import sqlite3 as sql\n",
+    "import logging\n",
+    "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import sqlite3 as sql\n",
-    "from scipy import stats\n",
     "\n",
-    "#from fangraphs import fangraph\n",
+    "from scrapers import fangraph\n",
     "import bb_stat_utils\n",
-    "from IPython.display import display, HTML\n",
     "\n",
+    "logging.basicConfig(format='%(asctime)s - %(levelname)s: %(message)s', level=logging.INFO)\n",
+    "from IPython.display import display, HTML\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Run this cell to generate the SQLLite DB. \n",
-    "# This may take a while (~30 mins)\n",
-    "#fangraph.generate_sqllite_tables()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Point to the SQLLTIE Db\n",
-    "db_path = r'/home/zach/dev/demos/baseball_stats/2021_Baseball-final.db'\n",
+    "db_path = r'./2021_Baseball.db'\n",
+    "if not os.path.exists(db_path):\n",
+    "    #This may take a while (~30 mins)\n",
+    "    fangraphscraper = fangraph.FangraphScraper(db_path)\n",
+    "    fangraphscraper.generate_sqllite_tables()\n",
     "conn = sql.connect(db_path)"
    ]
   },
@@ -61,16 +57,6 @@
     "\n",
     "## A Note on Innings Pitched\n",
     "For some reason, baseball stores fractional innings as .1 = 1/3 . Similiar to a base 3 system, but only for the decimal. so 3.1 innings is 3 1/3 innings in base 10. \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "os.path.exists(db_path)"
    ]
   },
   {
@@ -181,18 +167,14 @@
     "        bb_stat_utils.determine_pick_value(score_df)\n",
     "        display(HTML(f'<h1>{pos}</h1><b>' + score_df.iloc[:10][cats + ['distance_from_ideals', 'improvement', 'pick_value']].to_html()+'<\\b>'))\n",
     "        \n",
-    "        fig, ax = plt.subplots(nrows=3, ncols=1, figsize=(16,9))\n",
+    "        fig, ax = plt.subplots(nrows=2, ncols=1, figsize=(16,9))\n",
     "        fig.suptitle(pos)\n",
-    "        ax[1].plot(score_df['distance_from_ideals'].values)\n",
-    "        ax[1].set_ylabel('Distance From Ideal')\n",
-    "        ax[0].plot(score_df['improvement'].values)\n",
-    "        ax[0].set_ylabel('% Further Than Previous')\n",
-    "        ax[2].hist(score_df['improvement'].values, bins=20)\n",
-    "        ax[2].set_ylabel('Pick Value')\n",
+    "        ax[0].plot(score_df['distance_from_ideals'].values)\n",
+    "        ax[0].set_ylabel('Distance From Ideal')\n",
+    "        ax[1].hist(score_df['improvement'].values, bins=20)\n",
+    "        ax[1].set_ylabel('Pick Value')\n",
     "        ax[0].grid()\n",
-    "        ax[1].grid()\n",
-    "        ax[2].grid()\n",
-    "        "
+    "        ax[1].grid()        "
    ]
   },
   {
